tests/compiler_errors/const_eval_unsupported_operation.tlp
fn foo do end 

const CALLS_FOO foo end